--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://theorize.co/"
+baseURL = "https://theorize.co/"
 title = "Pondering new theories every day!"
 author = "Jeremiah Brazeau"
 languageCode = "en-us"
@@ -14,6 +14,7 @@ about = "A place for thinking out loud"
 linkedin = "https://www.linkedin.com/in/jeremiah-brazeau-17282b3/"
 email = "theorize.co@gmail.com"
 analytics = true
+commento = true
 
 [params.hero]
 enabled = true
